src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A18.cd
/*
 * ******************************************************************************
 * MontiCore Language Workbench, www.monticore.de
 * Copyright (c) 2017, MontiCore, All rights reserved.
 *
 * This project is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 3.0 of the License, or (at your option) any later version.
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this project. If not, see <http://www.gnu.org/licenses/>.
 * ******************************************************************************
 */

package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A18 {
  class A;
  class B;
  interface I;
  enum E;

  composition comp13 A        -> B;
  composition comp14 [1] A    -> B;
  composition comp15 [0..1] A -> B;
  composition comp16 [0..1] A -> B [*];

  composition comp17 A        -> E;
  composition comp18 [1] A    -> E;
  composition comp19 [0..1] A -> E;
  composition comp20 [0..1] A -> E [*];

  composition comp21 A        -> I;
  composition comp22 [1] A    -> I;
  composition comp23 [0..1] A -> I;
  composition comp24 [0..1] A -> I [*];
}
