src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A13.cd
/*
 * ******************************************************************************
 * MontiCore Language Workbench, www.monticore.de
 * Copyright (c) 2017, MontiCore, All rights reserved.
 *
 * This project is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 3.0 of the License, or (at your option) any later version.
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this project. If not, see <http://www.gnu.org/licenses/>.
 * ******************************************************************************
 */

package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A13 {
  class T1;
  class T2;
  
  class C1 {
    String attr;
  }
  class C2 extends C1 {
    int attr;
  }

  class C4 {
    int attr;
  }
  class C5 extends C4 {
    String attr;
  }

  class C7 {
    T1 t1;
  }  
  class C8 extends C7 {
    T2 t1;
  }
}
